--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,43 @@
 body {
 background-color: #ffffff;
 color: #757575;
+font-family: roboto, sans-serif;
+font-weight: 500;
+font-size: 14px;
 }
 a {
     text-decoration: none;
 }
-.header a {
-    color: #212121;   
+.nav a {
+    color: #212121;
 }
-.footer a {
-    color: #ffffff;
+.contact a {
+    color: #757575;
 }
-
+.header ul {
+    display: flex;
+}
+.logo {
+    font-family: raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2px;
+}
 .logo span {
     color: #2196F3;
 }
-.nav a:hover {
+.nav ul a:hover, .nav ul a:focus, .contact a:hover, .contact a:focus {
     color: #2196F3;
 }
-
 ul {
     list-style-type: none;
 }
-.header ul, .section ul {    
+.section-list {    
     display: flex;
 }
 .header li {
     padding-right: 50px;
 }
-
-
 
 /*main*/
 .hero {
@@ -52,4 +60,26 @@ h2, h3 {
 .footer {
     background-color: #2F303A;
     color: #ffffff;
+}
+.footer a {
+    color: #ffffff;
+}
+/*portfolio*/
+.nav-list {
+    display: flex;
+}
+.nav-list button {
+    background: #F5F4FA;
+    border: none;
+    border-radius: 4px;
+    color: #212121;
+    padding: 6px 22px;
+    margin-right: 8px;
+}
+.nav-list button:hover {
+    color: #ffffff;
+    background-color: #2196F3;
+}
+.project-cards p {
+    color: #757575;
 }
