--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@
     --accent-color: #2196F3;
     --grey-background: #2F303A;
 }
+                                      /*додано курсор*/
+.button {
+    cursor: pointer;
+}
+
 
 body {
 background-color: var(--white-color);
@@ -12,10 +17,12 @@ color: var(--main-font-color);
 font-family: roboto, sans-serif;
 font-size: 14px;
 }
+
 a {
     text-decoration: none;
 }
-.nav a {
+                                         /*задано колір для header. Два кольори у макеті*/
+.header a {
     color: var(--secondary-color);
 }
 .contact a {
@@ -26,7 +33,7 @@ a {
     font-family: raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.2px;
+    line-height: 1.2;
 }
 .logo span {
     color: var(--accent-color);
@@ -52,7 +59,7 @@ ul {
 .hero-title {
     font-size: 44px;
     font-weight: 900;
-    line-height: 1.4px;
+    line-height: 1.4;
     text-align: center;
 }
 .hero button {
@@ -63,7 +70,7 @@ ul {
     border-radius: 4px;
     font-size: 16px;
     font-weight: 700;
-    line-height: 1.9px;
+    line-height: 1.9;
     text-align: center;
 }
 
@@ -74,15 +81,29 @@ font-size: 36px;
 font-weight: 700;
 line-height: 1.1px;
 }
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+                     /*h3 начебто як у макеті*/
 .features h3 {
     font-size: 14px;
     font-weight: 700;
-    line-height: 1.1px;
+    line-height: 1.1;
 }
 .features .list {
     font-size: 14px;
     font-weight: 400;
-    line-height: 1.7px;
+    line-height: 1.7;
 }
 h2, h3 {
     color: var(--secondary-color);
@@ -90,12 +111,12 @@ h2, h3 {
 .team h3 {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.2px;
+    line-height: 1.2;
 }
 .team p {
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.2px;
+    line-height: 1.2;
 }
 
 .footer {
@@ -107,10 +128,10 @@ h2, h3 {
 }
 
 /*portfolio*/
-.nav-list {
+.buttons {
     display: flex;
 }
-.nav-list button {
+.buttons button {
     background: var(--button-background);
     border: none;
     border-radius: 4px;
@@ -120,21 +141,22 @@ h2, h3 {
    
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.6px;
+    line-height: 1.6;
+
 }
-.nav-list button:hover {
+.buttons button:hover {
     color: var(--white-color);
-    background-color: var(--grey-background);
+    background-color: var(--accent-color);
 }
 .project-cards p {
     color: var(--main-font-color);
         
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.9px;
+    line-height: 1.9;
 }
 .project-cards h3 {
     font-weight: 700;
     font-size: 18px;
-    line-height: 2px;
+    line-height: 2;
 }
